# TreeOfLife-toolbox

./: .gitignore  CITATION.cff  README.md  pyproject.toml
config/: example_config.yaml
config/tree_of_life_200M/: bioscan_download_config.yaml  eol_download_config.yaml  excluded_servers_general_tol.csv  excluded_servers_safe_tol.csv  fathomNet_download_config.yaml  general_download_config.yaml  safe_download_config.yaml
docs/: BIOSCAN_download_README.md  EoL_download_README.md  FathomNet_download_README.md  GBIF_fast_download_README.md  GBIF_slow_download_README.md  General_download_README.md  README.md  Safe_download_README.md  scripts_README.md
processing/: README.md  requirements_tol2webdataset.txt  tol2webdataset_full_224.yaml
processing/content_dedup/: CONVENTIONS.md  README.md  experiments.py  justfile  pyproject.toml
processing/content_dedup/dedup/: algorithms.py  conftest.py  datasets.py  filtering.py  hashing.py  helpers.py  test_datasets.py
processing/content_dedup/experiments/: exp1.py
processing/content_dedup/scripts/: imghash.py  imghash.slurm
processing/data/support_set_embeddings/: README.md
processing/docs/: create_processing_environment.md  requirements_batch_camera_trap.txt  requirements_batch_clip.txt  requirements_batch_face_detection.txt  requirements_batch_processing.txt
processing/notebooks/benchmark_validation/: README.md  rare_species.ipynb  rare_species.py
processing/notebooks/gbif/: Identify_Camera_Trap.ipynb  Identify_Camera_Trap.py  Identify_Citizen_Science.ipynb  Identify_Citizen_Science.py  Identify_Museum_Specimen.ipynb  Identify_Museum_Specimen.py  README.md
processing/notebooks/helpers/: README.md  __init__.py  data_analysis.py  gbif.py  image.py  text_search.py  variables.py
processing/scripts/: make_txt_embedding.py  t2w_submit.sh
processing/scripts/mongo/: install_mongodb.sh  install_mongosh.sh  start_mongodb.sh  uninstall_mongodb.sh  uninstall_mongosh.sh
processing/scripts/processing/: README.md  create_lookup_tbl.slurm  create_pdq_hash.slurm  create_support_set.slurm  decode_images.slurm  extract_citizen_science.slurm  extract_images.slurm  extract_museum_specimen.slurm  run_clip_distributed.slurm  run_face_detection_distributed.slurm  run_megadetector_distributed.slurm
processing/scripts/tol2webdataset/: t2w_filter.slurm  t2w_scheduler.slurm  t2w_verifier.slurm  t2w_worker.slurm
processing/src/processing/: create_lookup_tbl.py  create_pdq_hash.py  create_support_set.py  decode_images.py  extract_citizen_science.py  extract_images.py  extract_museum_specimen.py  processing_utils.py  run_clip_distributed.py  run_face_detection_distributed.py  run_megadetector_distributed.py
processing/src/tol2webdataset/: README.md  checkpoint.py  config.py  filter.py  runner.py  scheduler.py  tol2webdataset.py  utils.py  verification.py
scripts/: tools_filter.slurm  tools_scheduler.slurm  tools_verifier.slurm  tools_worker.slurm
src/DD_tools/column_name_change/: classes.py
src/DD_tools/column_name_change_lila_fix/: README.md  classes.py
src/DD_tools/data_merging/: classes.py
src/DD_tools/data_transfer/: classes.py
src/DD_tools/eol_rename/: classes.py
src/DD_tools/fathom_net_crop/: classes.py
src/DD_tools/fathom_net_crop_fix/: README.md  classes.py
src/DD_tools/filter_out_by_uuid/: README.md  classes.py
src/DD_tools/lila_bc_filtering/: classes.py
src/DD_tools/lila_extra_noaa_processing/: classes.py
src/DD_tools/lila_separation_multilable_filtering/: classes.py  metadata_separation.py
src/DD_tools/lila_separation_single_label_filtering/: classes.py
src/DD_tools/main/: config.py  filters.py  main.py  registry.py  utils.py
src/DD_tools/mam_ansp_fix/: README.md  classes.py
src/DD_tools/research_filtering/: README.md  classes.py
src/DD_tools/transfer_and_type_change/: classes.py  filter.py  main.py  runner.py  scheduler.py  tools_filter.slurm  tools_scheduler.slurm  tools_submit.sh  tools_verifier.slurm  tools_worker.slurm  verification.py
src/TreeOfLife_toolbox/: __init__.py
src/TreeOfLife_toolbox/column_name_change/: README.md  __init__.py  classes.py
src/TreeOfLife_toolbox/column_name_change_lila_fix/: README.md  __init__.py  classes.py
src/TreeOfLife_toolbox/data_merging/: README.md  __init__.py  classes.py
src/TreeOfLife_toolbox/data_transfer/: README.md  __init__.py  classes.py
src/TreeOfLife_toolbox/eol_rename/: README.md  __init__.py  (+1 more)
(+64 files in other folders)
