[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/TreeOfLife_toolbox"]

[project]
name = "TreeOfLife_toolbox"
dynamic = ["version"]
authors = [
    { name = "Andrey Kopanev", email = "kopanev.1@osu.edu" },
    { name = "Elizabeth G. Campolongo", email = "e.campolongo479@gmail.com" },
    { name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com" },
]
description = "A tool for processing datasets that were downloaded using the distributed-downloader package."
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "attrs",
    "brotli",
    "cramjam",
    "cython",
    "fsspec",
    "inflate64",
    "mpi4py",
    "multivolumefile",
    "opencv-python",
    "pandas",
    "pathspec",
    "pillow",
    "psutil",
    "pyarrow",
    "pybcj",
    "pycryptodomex",
    "pyppmd",
    "pyspark",
    "python-dotenv",
    "pyyaml",
    "pyzstd",
    "requests",
    "setuptools",
    "texttable",
    "trove-classifiers",
    "typing-extensions",
    "wheel"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff"
]

keywords = [
    "parallel",
    "distributed",
    "url",
    "mpi-applications",
    "dataset-generation",
    "processing",
]

[project.urls]
Homepage = "https://github.com/Imageomics/distributed-downloader"
Repository = "https://github.com/Imageomics/distributed-downloader.git"
"Bug Tracker" = "https://github.com/Imageomics/distributed-downloader/issues"

[project.scripts]
tree_of_life_toolbox = "TreeOfLife_toolbox.main.main:main"

[tool.hatch.version]
path = "src/TreeOfLife_toolbox/main/__about__.py"
